--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+#/src/config/config.js
+#/config.js
+#/src/config/*.js
+# misc
+.DS_Store
+.env
+#.env.local
+#.env.development.local
+#.env.test.local
+#.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+----------------------------------
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
